// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/DropDownButton Bordered List 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
    >
      <span>
        <button
          class="StyledButton-sc-323bzc-0 csHtjh sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-jIkYaL MXuzx"
          type="button"
        >
          Dropdown
        </button>
        <button
          class="StyledButton-sc-323bzc-0 nWGsv sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-TBWwm jyoHOr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
    >
      <span>
        <button
          class="StyledButton-sc-323bzc-0 csHtjh sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-jIkYaL MXuzx"
          type="button"
        >
          Dropdown
        </button>
        <button
          class="StyledButton-sc-323bzc-0 nWGsv sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-TBWwm jyoHOr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Drop Up 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT hDDKEH"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
      >
        <span>
          <button
            class="StyledButton-sc-323bzc-0 csHtjh sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-jIkYaL MXuzx"
            type="button"
          >
            Dropdown
          </button>
          <button
            class="StyledButton-sc-323bzc-0 nWGsv sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-TBWwm jyoHOr"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Icon Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
    >
      <button
        class="StyledButton-sc-323bzc-0 kPyHPN sc-bqiQRQ sc-ksdxAp dZBHzy BkFrI sc-dJjZJu bJNpNW sc-eLwHGX cCUeKt"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-chevron-down fa-w-14 "
          color="#444444"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton Joined 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
    >
      <button
        class="StyledButton-sc-323bzc-0 csHtjh sc-bqiQRQ sc-hBURRC dZBHzy gVEMEs sc-dJjZJu bJNpNW sc-eLwHGX cCUeKt"
        type="button"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah kfDFoA"
        >
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT kQjUeP"
          >
            Dropdown
          </div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton No List Formatting 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
    >
      <span>
        <button
          class="StyledButton-sc-323bzc-0 cKZnTj sc-bqiQRQ sc-ksdxAp dZBHzy BkFrI sc-dJjZJu bJNpNW sc-jIkYaL MXuzx"
          type="button"
        />
        <button
          class="StyledButton-sc-323bzc-0 kPyHPN sc-bqiQRQ sc-ksdxAp dZBHzy BkFrI sc-dJjZJu bJNpNW sc-TBWwm jyoHOr"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down fa-w-14 "
            color="#444444"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/DropDownButton With Primary Button 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-jOxuqd bAIDcU sc-bTfYlY eUmBrT"
    >
      <button
        class="StyledButton-sc-323bzc-0 cKZnTj sc-bqiQRQ sc-ksdxAp dZBHzy BkFrI sc-dJjZJu bJNpNW sc-eLwHGX cCUeKt"
        type="button"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah kfDFoA"
        >
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT kQjUeP"
          >
            Dropdown
          </div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down fa-w-14 "
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
